book.toml: changed title

--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["Sam Sendelbach"]
 language = "en"
 multilingual = false
 src = "src"
-title = "ERTH: CO2 Digital Currency"
+title = "ERTH: Climate Capitalism"
